samples/_failures_safe/1761564323_f38750_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b11cd78f.c: In function ‘main’:
./samples/SAFE/__tmp_b11cd78f.c:150:17: error: expected ‘;’ at end of input
  150 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b11cd78f.c:150:5: error: expected declaration or statement at end of input
  150 |     print_matrix
      |     ^~~~~~~~~~~~
